--- a/Assignment2/views/latest.hbs
+++ b/Assignment2/views/latest.hbs
@@ -39,3 +39,94 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+<div class="container p-5">
+    <h1 class="heading-latest">{{{title}}}</h1>
+    <div class="content__shows">
+        <!-- card here -->
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+    </div>
+</div>
+<div class="container p-5">
+    <div class="content__shows">
+        <!-- card here -->
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+    </div>
+</div>
+<div class="container p-5">
+    <div class="content__shows">
+        <!-- card here -->
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
+                alt="Movie Poster" />
+            <div class="title-box"></div>
+            <div class="name">Captain Marvel</div>
+        </div>
+    </div>
+</div>
