--- a/Assignment2/public/stylesheets/style.css
+++ b/Assignment2/public/stylesheets/style.css
@@ -74,6 +74,58 @@ h1, h2, h3, h4, h5, h6 {
 .carousel-caption {
   bottom: 8rem; 
 }
+.content__shows {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.content__shows div {
+  position: relative;
+  width: 200px;
+  border-radius: 4px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.content__shows div:hover img {
+  transform: scale(1.15);
+}
+.content__shows div .title-box {
+  content: "";
+  height: 100px;
+  position: absolute;
+  transform: translatey(50px);
+  transition: 0.3s ease;
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), black);
+  width: 100%;
+  z-index: 1;
+}
+.content__shows div img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  transition: 0.3s ease;
+}
+.content__shows div .name {
+  position: absolute;
+  width: 100%;
+  bottom: 10px;
+  color: #fff;
+  transform: translatey(50px);
+  padding: 10px;
+  z-index: 10;
+  transition: .3s ease;
+  cursor: default;
+}
+.content__shows div:hover .name,
+.content__shows div:hover .title-box {
+  transform: translatey(0);
+}
+.heading-latest {
+  text-align: left;
+  margin: 20px 50px;
+}
 /*-------------------Movies-Series-Favourites------------------*/
 
 /*----------------------------Log In----------------------------*/
