--- a/Assignment2/public/stylesheets/style.css
+++ b/Assignment2/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
   padding: 0px;
   font-size: 16px;
   font-family: "Poppins", sans-serif;
-  background-color: #461BBC;
+  background-color: #673FD4;
   color: white;
 }
 .poppins-extralight {
