--- a/Assignment2/views/layout.hbs
+++ b/Assignment2/views/layout.hbs
@@ -21,7 +21,7 @@
 
 <body>
   <!-- Navbar -->
-  <header class="p-1 bg-medium-purple text-white sticky-top shadow-lg">
+  <header class="p-1 bg-light-purple text-white sticky-top shadow-lg">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a href="/" class="navbar-brand d-flex align-items-center me-3">
@@ -61,7 +61,7 @@
 
   {{{body}}}
 
-  <div class="container-fluid shadow-lg bg-medium-purple">
+  <div class="container-fluid shadow-lg bg-light-purple">
     <footer class="py-3">
       <ul class="nav justify-content-center border-bottom pb-2 mb-2">
         <li class="nav-item"><a href="/" class="nav-link px-2 text-white">Home</a></li>
@@ -75,7 +75,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-  <script src="../public/javascripts/script.js"></script>
+  <script src="/javascripts/script.js"></script>
 </body>
 
 </html>
