--- a/Assignment2/views/layout.hbs
+++ b/Assignment2/views/layout.hbs
@@ -39,9 +39,9 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link px-2 text-white" href="./latest">Latest</a></li>
-            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Movies</a></li>
-            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Series</a></li>
-            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Favorites</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="./movies">Movies</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="./series">Series</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="./favorites">Favorites</a></li>
             <li class="nav-item"><a class="nav-link px-2 text-white" href="./contact">Contact</a></li>
           </ul>
 
