--- a/Assignment2/views/login.hbs
+++ b/Assignment2/views/login.hbs
@@ -12,12 +12,12 @@
             </div>
 
             <div data-mdb-input-init class="form-outline mb-4">
-              <input type="text" id="username" class="form-control form-control-lg" />
+              <input type="text" name="username" id="username" class="form-control form-control-lg" />
               <label class="form-label" for="form2Example18">Username</label>
             </div>
 
             <div data-mdb-input-init class="form-outline mb-4">
-              <input type="password" id="form2Example28" class="form-control form-control-lg" />
+              <input type="password" name="password" id="form2Example28" class="form-control form-control-lg" />
               <label class="form-label" for="form2Example28">Password</label>
             </div>
 
