--- a/Assignment2/views/index.hbs
+++ b/Assignment2/views/index.hbs
@@ -22,8 +22,14 @@
                     <div class="row justify-content-center">
                         <div class="col-md-6">
                             <div class="search-container d-flex align-items-center position-relative">
-                                <input type="text" class="form-control search-input" placeholder="Search...">
-                                <i class="fas fa-search position-absolute top-50 end-0 translate-middle-y me-3 text-muted"></i>
+                                <form action="/search" method="GET" class="w-100">
+                                    <div class="search-container d-flex align-items-center position-relative">
+                                        <input type="text" name="q" class="form-control search-input"
+                                            placeholder="Search..." required>
+                                        <i
+                                            class="fas fa-search position-absolute top-50 end-0 translate-middle-y me-3 text-muted"></i>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
