--- a/Assignment2/views/login.hbs
+++ b/Assignment2/views/login.hbs
@@ -7,23 +7,42 @@
           <form method="post" style="width: 23rem;">
 
             <div class="d-flex justify-content-between align-items-center px-5 ms-xl-4 mb-4">
-              <h3 id="log-h3" class="fw-normal h1 fw-bold mb-0" style="letter-spacing: 1px;">Log in</h3>
+              <h3 id="log-h3" class="fw-normal h1 mb-0" style="letter-spacing: 1px;">Log in</h3>
               <img class="logo-glow" src="/images/logo-tsp.png" alt="Logo" height="100">
             </div>
 
-            <div data-mdb-input-init class="form-outline mb-4">
+            <div class="form-outline mb-4">
               <input type="text" name="username" id="username" class="form-control form-control-lg" />
               <label class="form-label" for="form2Example18">Username</label>
             </div>
 
-            <div data-mdb-input-init class="form-outline mb-4">
+            <div class="form-outline mb-4">
               <input type="password" name="password" id="form2Example28" class="form-control form-control-lg" />
               <label class="form-label" for="form2Example28">Password</label>
             </div>
 
-            <div class="pt-1 mb-4">
-              <button data-mdb-button-init data-mdb-ripple-init class="btn btn-warning btn-lg btn-block"
+            <div class="pt-1 mb-0">
+              <button class="btn btn-warning btn-lg btn-block"
                 type="submit">Login</button>
+            </div>
+            <div class="pt-1 mb-3">
+              <!-- Divider with "Or" -->
+              <div class="d-flex align-items-center my-4">
+                <hr class="flex-grow-1 text-light" />
+                <p class="text-center mx-3 mb-0 text-white">Or</p>
+                <hr class="flex-grow-1 text-light" />
+              </div>
+
+              <!-- Social login buttons -->
+              <div class="text-center">
+                <p class="lead fw-normal mb-3 text-white">Sign in with</p>
+                <a href="/github" class="mx-1 no-ul" title="GitHub">
+                  <i class="fab fa-github fa-lg"></i>
+                </a>
+                <a href="/google" class="mx-1 no-ul" title="Google">
+                  <i class="fab fa-google fa-lg"></i>
+                </a>
+              </div>
             </div>
 
             <p>Don't have an account? <a href="./signup" class="link-info">Register here</a></p>
