--- a/Assignment2/views/index.hbs
+++ b/Assignment2/views/index.hbs
@@ -1,12 +1,5 @@
 <!-- Hero -->
-<!-- Hero -->
-<div class="p-5 text-center bg-image rounded-3 hero" style="
-    background-image: url('/images/masthead.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 91vh;
-    position: relative;
-">
+<div class="masthead hp-5 text-center bg-image rounded-3 hero">
     <div class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(0, 0, 0, 0.8);">
         <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white w-100">
@@ -43,6 +36,4 @@
         </div>
     </div>
 </div>
-<!-- Hero -->
-
 <!-- Hero -->
