--- a/Assignment2/views/layout.hbs
+++ b/Assignment2/views/layout.hbs
@@ -21,7 +21,7 @@
 
 <body>
   <!-- Navbar -->
-  <header class="p-1 bg-light-purple text-white sticky-top shadow-lg">
+  <header class="p-1 bg-light-purple text-light sticky-top shadow-lg">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a href="/" class="navbar-brand d-flex align-items-center me-3">
