Sending movie info from search results to info page

--- a/Assignment2/views/info.hbs
+++ b/Assignment2/views/info.hbs
@@ -1,35 +1,32 @@
 <nav aria-label="breadcrumb" class="m-5">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/latest">Latest</a></li>
-        <li class="breadcrumb-item active" aria-current="page">title</li>
+        <li class="breadcrumb-item"><a href="/latest">Search Results</a></li>
+        <li class="breadcrumb-item" aria-current="page">{{title}}</li>
     </ol>
 </nav>
-<div class="card m-5 h-card border-0">
-    <div class="row g-0">
-        <div class="col-md-4">
-            <img src="#" alt="Poster" class="img-fluid rounded-start"
-                onerror="this.src='/images/placeholder.jpg'" />
+<div class="card info-card">
+    <div class="row g-0 info-row">
+        <div class="col-md-4 info-poster-col">
+            <img src="{{poster}}" alt="{{title}} Poster" class="info-poster-img"/>
         </div>
-        <div class="col-md-8 bg-dark-purple rounded-end text-light">
+        <div class="col-md-8 info-details-col">
             <div class="card-body">
-                <h1 class="card-title">Title</h1>
+                <h1 class="card-title">{{title}}</h1>
                 <p class="card-text">
-                    <small class="text-warning me-3">Type: </small>
-                    <small class="text-warning me-3">Genre: </small>
-                    <small class="text-warning me-3">Duration: min</small>
-
+                    <small class="text-warning me-3">Type: {{type}}</small>
+                    <small class="text-warning me-3">Genre: {{genre}}</small>
+                    <small class="text-warning me-3">Duration: {{duration}}</small>
                 </p>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptas blanditiis id ipsam. Saepe a sequi dolor cumque minus eos incidunt autem. Culpa voluptatem provident asperiores eligendi adipisci molestiae? Eos?</p>
-
+                <p class="card-text">{{description}}</p>
                 <p class="card-text">
-                    <small class="me-3">Release Date: </small>
+                    <small class="me-3 text-warning">Release Date: {{releaseDate}}</small>
                 </p>
                 <p class="card-text">
-                    <small class="me-3">Rating: /10</small>
+                    <small class="me-3 text-warning">Rating: {{rating}}/10</small>
                 </p>
                 <p class="card-text">
-                    <small class="me-3">Country: </small>
+                    <small class="me-3 text-warning">Country: {{country}}</small>
                 </p>
             </div>
         </div>
