--- a/Assignment2/views/search.hbs
+++ b/Assignment2/views/search.hbs
@@ -2,7 +2,7 @@
     <h1 class="m-4 display-5 text-left">{{{title}}}</h1>
     <div class="content__shows">
         {{#each items}}
-        <a href="/info/{{this.id}}" class="card-link">  
+        <a href="/info/{{media_type}}/{{id}}" class="card-link">  
             <div class="card-item">
                 <img src="{{this.poster}}" alt="Movie Poster" />
                 <div class="title-box"></div>
