--- a/Assignment2/views/latest.hbs
+++ b/Assignment2/views/latest.hbs
@@ -1,82 +1,42 @@
-<div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
+<div id="carouselExampleCaptions" class="carousel slide mb-5" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    {{#each carousel}}
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{@index}}" class="{{#if @first}}active{{/if}}" aria-current="{{#if @first}}true{{/if}}" aria-label="Slide"></button>
+    {{/each}}
+  </div>
+  <div class="carousel-inner">
+    {{#each carousel}}
+    <div class="carousel-item {{#if @first}}active{{/if}}">
+      <img src="{{this.backdrop}}" class="d-block w-100" alt="{{this.title}}">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>{{this.title}}</h5>
+        <p>{{this.overview}}</p>
+      </div>
     </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-            </div>
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+    {{/each}}
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
 <div class="container pb-5">
     <h1 class="m-4 display-5 text-left">{{{title}}}</h1>
     <div class="content__shows">
         <!-- card here -->
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
-        <div><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/avengers/p-captmarvel.jpg"
-                alt="Movie Poster" />
-            <div class="title-box"></div>
-            <div class="name">Captain Marvel</div>
-        </div>
+        {{#each items}}
+        <a href="/info/{{media_type}}/{{id}}" class="card-link">
+            <div class="card-item">
+                <img src="{{this.poster}}" alt="Movie Poster" />
+                <div class="title-box"></div>
+                <div class="name">{{this.title}}</div>
+            </div>
+        </a>
+        {{/each}}
     </div>
 </div>
