--- a/Assignment2/views/info.hbs
+++ b/Assignment2/views/info.hbs
@@ -28,6 +28,15 @@
                 <p class="card-text">
                     <small class="me-3 text-warning">Country: {{country}}</small>
                 </p>
+                {{#if user}}
+                <div class="text-start">
+                    <a href="/favorites/add?id={{id}}&title={{title}}&poster={{poster}}&media_type={{typeKey}}" onclick="return confirmAdd()" type="button" class="btn btn-success"><i class="fa-solid fa-heart"></i></a>
+                    &nbsp;
+                    <a href="./edit" type="button" class="btn btn-warning"><i class="fa-solid fa-clock"></i></a>
+                    &nbsp;
+                    <a href="/favorites/delete?id={{id}}" type="button" class="btn btn-danger" onclick="return confirmDeletion()"><i class="fa-solid fa-trash"></i></a>
+                </div>
+                {{/if}}
             </div>
         </div>
     </div>
