Added functionality to user profile to UPDATE Bio and Genre

--- a/Assignment2/views/layout.hbs
+++ b/Assignment2/views/layout.hbs
@@ -54,7 +54,7 @@
           {{#if user}}
           {{!-- If user is logged in, show profile and logout options --}}
           <div class="text-end">
-            <a href="#" type="button" class="btn text-white me-2">{{user.username}}</a>
+            <a href="/profile" type="button" class="btn text-white me-2">{{user.username}}</a>
             <a href="/logout" type="button" class="btn btn-danger">Log Out</a>
           </div>
 
