--- a/Assignment2/views/search.hbs
+++ b/Assignment2/views/search.hbs
@@ -1,5 +1,5 @@
 <div class="container pb-5">
-    <h1 class="m-4 display-5 text-left">{{{title}}}</h1>
+    <h1 class="mb-4 me-4 mt-4 display-5 text-left">{{{title}}}</h1>
     <div class="content__shows">
         {{#each items}}
         <a href="/info/{{media_type}}/{{id}}" class="card-link">
